SSO Announcement Modal fixes: overflow/scroll styling + content updates (#12732)
* Address overflow issues for modals when zoom is very high

* Remove mention of eBenefits until it launches

* Add in conditional display of 'Ebenefits' in info modal

* Conditionalize an addititonal mention of benefits

* Fix whitespace

* Fix id name typo

--- a/src/platform/site-wide/announcements/sass/style.scss
+++ b/src/platform/site-wide/announcements/sass/style.scss
@@ -1,4 +1,9 @@
-@import "~@department-of-veterans-affairs/formation/sass/shared-variables";
+@import '~@department-of-veterans-affairs/formation/sass/shared-variables';
+
+#modal-announcement .va-modal-inner {
+  max-height: 100vh;
+  overflow-y: scroll;
+}
 
 #modal-announcement h3 {
   margin-top: 1.5em;
